--- a/css/common.css
+++ b/css/common.css
@@ -23,31 +23,35 @@
     --black: #191919;
 
     /* 가로 크기 */
-    --width: 1100px;
+    --width: 110rem;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
+    font-family: 'NanumSquareRound', 'yg-jalnan', serif;
     background: url(../img/bg_img.jpg) no-repeat fixed;
+    letter-spacing: .03rem;
 }
 
 img {
     -webkit-user-drag: none;
 }
 
-a,
-button {
+a, button {
     cursor: pointer;
 }
 
-.btn {
-    border: none;
-    box-shadow: 1px 1px 3px gray;
+input, button {
+    font-family: 'NanumSquareRound', serif;
 }
 
 /* 탑 버튼 */
 .top-btn {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 2rem;
+    right: 2rem;
     z-index: 999;
 }
