--- a/css/footer.css
+++ b/css/footer.css
@@ -1,89 +1,71 @@
 @charset "utf-8";
 
 footer {
-    padding-top: 1rem;
-    height: 220px;
+    position: absolute;
+    width: 100%;
     background: var(--patty);
-}
-
-footer:after {
-    content: "";
-    display: block;
-    clear: both;
 }
 
 .footer-top {
     display: flex;
-    position: relative;
-    top: 10px;
-    width: 1100px;
-    margin: 0 auto;
-    padding-bottom: 15px;
-    border-bottom: 2px solid white;
     align-items: center;
     justify-content: space-between;
-    font-family: 'yg-jalnan', serif;
+    width: var(--width);
+    margin: 0 auto;
+    padding: 3rem 0;
+    border-bottom: 2px solid white;
     text-align: left;
     color: white;
 }
 
 .footer-top-text1 h3 {
-    font-size: 30px;
+    margin-bottom: 1rem;
+    font-family: 'yg-jalnan', serif;
+    font-size: 3rem;
 }
 
 .footer-top-text1 p {
-    font-family: 'NanumSquareRound', serif;
-    font-size: 17px;
+    font-size: 1.8rem;
 }
 
 .footer-top-text2 {
-    position: relative;
     display: flex;
-    top: 18px;
-    margin-right: 30px;
+    align-items: center;
+    font-family: 'yg-jalnan', serif;
 }
 
 .footer-top-text2 img {
-    height: 48px;
+    width: 4.8rem;
+    margin-right: 1rem;
 }
 
 .footer-top-text2 p {
-    position: relative;
-    font-size: 46px;
-    bottom: 15px;
-    left: 15px;
+    font-size: 4.6rem;
 }
 
 .footer-bottom {
     display: flex;
-    color: white;
-    margin: 20px auto 0;
-    width: 1100px;
     justify-content: space-between;
+    width: var(--width);
+    margin: 2rem auto;
+    color: white;
 }
 
 .footer-bottom-text1 h1 {
     font-family: 'yg-jalnan', serif;
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
 }
 
-.footer-bottom-text1 p {
-    font-family: 'NanumSquareRound', serif;
-    font-size: 14px;
-}
-
-.footer-bottom-text2 {
-    position: relative;
-    top: 5px;
-    font-family: 'NanumSquareRound', serif;
+.footer-bottom-text1 li {
+    margin-bottom: .5rem;
+    font-size: 1.4rem;
 }
 
 .footer-bottom-text2 ul {
-    margin-bottom: 30px;
-}
-
-.footer-bottom-text2 li {
-    float: left;
-    list-style: none;
+    display: flex;
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
 }
 
 .footer-bottom-text2 li::after {
@@ -95,12 +77,18 @@ footer:after {
     content: "";
 }
 
-.footer-bottom-text2 button {
-    padding: 5px 20px;
+.footer-btn-group {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-btn {
+    margin: 0 .3rem;
+    padding: .5rem 3rem;
     border: 2px solid #FCDEC0;
-    border-radius: 20px;
+    border-radius: 2rem;
     background-color: initial;
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: bold;
     color: white;
 }
