--- a/css/indexMain.css
+++ b/css/indexMain.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
 
 #container {
-    margin-top: 120px;
+    margin-top: 12rem;
 }
 
 /* 영상 */
 .youtube {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 1rem;
     align-items: center;
     text-align: center;
 }
@@ -16,63 +16,63 @@
 .bread {
     background: var(--bread);
     width: var(--width);
-    height: 90px;
-    border-radius: 100px 100px 5px 5px;
+    height: 9rem;
+    border-radius: 10rem 10rem 5px 5px;
 }
 
 #recommend {
-    position: relative;
-    top: 15px;
     font-family: 'yg-jalnan', serif;
-    font-size: 35px;
+    font-size: 3.8rem;
     color: white;
     user-select: none;
+    line-height: 9rem;
 }
 
 .menu-video {
-    margin: 8px 0 5px;
+    margin: .8rem 0 .5rem;
 }
 
 iframe {
-    border-radius: 30px;
-    object-fit: cover;
+    border-radius: 3rem;
 }
 
 .sns {
-    width: var(--width);
-    height: 80px;
     display: flex;
     justify-content: space-evenly;
-    border-radius: 5px 5px 20px 20px;
+    width: var(--width);
+    height: 8rem;
+    border-radius: .5rem .5rem 2rem 2rem;
     background: var(--bread);
+}
+
+.sns>a {
+    display: flex;
+    align-items: center;
 }
 
 .sns img {
     position: relative;
-    top: 8px;
-    width: 70px;
-    height: 70px;
-    margin: 0 5px;
+    margin-top: .5rem;
+    width: 7rem;
+    height: 7rem;
+    margin-right: .3rem;
     object-fit: cover;
 }
 
-.sns a {
-    display: flex;
-}
-
 .snsText {
-    font-family: 'yg-jalnan', serif;
-    color: white;
     position: relative;
-    top: 10px;
+    font-family: 'yg-jalnan', serif;
+    font-size: 1.6rem;
+    color: white;
 }
 
 .snsText p {
-    height: 17px;
-    border-radius: 3px;
+    border-radius: .3rem;
+    margin-top: .5rem;
+    padding: .3rem;
     background: white;
     font-family: 'NanumSquareRound', serif;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--black);
 }
@@ -83,7 +83,7 @@ iframe {
     width: var(--width);
     margin: auto;
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 2rem;
 }
 
 .carousel-slide {
@@ -102,9 +102,9 @@ iframe {
     top: 50%;
     left: 0;
     width: 35px;
-    height: 40px;
+    height: 4rem;
     transform: translate(20%, -50%);
-    border: none;
+    border: 0;
     background: url(../img/btn_prev.png) no-repeat;
 }
 
@@ -113,23 +113,23 @@ iframe {
     top: 50%;
     right: 0;
     width: 35px;
-    height: 40px;
+    height: 4rem;
     transform: translate(-10%, -50%);
-    border: none;
+    border: 0;
     background: url(../img/btn_next.png) no-repeat;
 }
 
 /* 주문 */
 .order {
     display: flex;
-    margin: 10px;
+    margin: 1rem;
     justify-content: center;
 }
 
 .order .appImg {
-    border-radius: 20px 0 0 20px;
+    border-radius: 2rem 0 0 2rem;
 }
 
 .order .deliveryImg {
-    border-radius: 0 20px 20px 0;
+    border-radius: 0 2rem 2rem 0;
 }
